; ModuleID = '/home/carl/AnghaBench/jq/src/extr_util.c_mkstemp.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_util.c_mkstemp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_CREAT = common dso_local global i32 0, align 4
@O_EXCL = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mkstemp(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i64 @strlen(i8* %7)
  store i64 %8, i64* %3, align 8
  store i32 5, i32* %4, align 4
  %9 = load i64, i64* %3, align 8
  %10 = add i64 %9, 1
  %11 = call i8* @alloca(i64 %10)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @strcpy(i8* %16, i8* %17)
  br label %19

19:                                               ; preds = %39, %1
  %20 = load i8*, i8** %2, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @strcpy(i8* %20, i8* %21)
  %23 = load i8*, i8** %2, align 8
  %24 = call i32 @mktemp(i8* %23)
  %25 = load i8*, i8** %2, align 8
  %26 = load i32, i32* @O_CREAT, align 4
  %27 = load i32, i32* @O_EXCL, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* @O_RDWR, align 4
  %30 = or i32 %28, %29
  %31 = call i32 @open(i8* %25, i32 %30, i32 384)
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %19
  %33 = load i32, i32* %5, align 4
  %34 = icmp eq i32 %33, -1
  br i1 %34, label %35, label %39

35:                                               ; preds = %32
  %36 = load i32, i32* %4, align 4
  %37 = add nsw i32 %36, -1
  store i32 %37, i32* %4, align 4
  %38 = icmp sgt i32 %36, 0
  br label %39

39:                                               ; preds = %35, %32
  %40 = phi i1 [ false, %32 ], [ %38, %35 ]
  br i1 %40, label %19, label %41

41:                                               ; preds = %39
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @alloca(i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @mktemp(i8*) #1

declare dso_local i32 @open(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
